<resources>
    <string name="app_name">LED Strip controllor</string>
    <string name="textview">TextView</string>
    <string name="update">update</string>
    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="updateip">UPDATE</string>
    <string name="back">Back</string>
    <string name="ip">IP</string>
    <string name="ip1">IP:</string>
    <string name="dot">.</string>
    <string name="port">PORT</string>
    <string name="power">Power</string>
</resources>