<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <com.flask.colorpicker.slider.LightnessSlider
        android:id="@+id/v_lightness_slider"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_picker_view" />

    <com.flask.colorpicker.ColorPickerView
        android:id="@+id/color_picker_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="10dp"
        app:alphaSlider="true"
        app:alphaSliderView="@+id/v_alpha_slider"
        app:density="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lightnessSlider="true"
        app:lightnessSliderView="@+id/v_lightness_slider"
        app:wheelType="FLOWER" />

    <TextView
        android:id="@+id/ColCode"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/Update" />

    <Button
        android:id="@+id/Update"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/update"
        app:layout_constraintBottom_toTopOf="@+id/background"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/power"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/ColCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/power"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>