<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ip_port_update">

    <Button
        android:id="@+id/updateid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/updateip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BACK"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BACK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/updateid" />

    <EditText
        android:id="@+id/Ip1"
        android:layout_width="50dp"
        android:layout_height="36dp"
        android:ems="10"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dot1"
        app:layout_constraintStart_toEndOf="@+id/IP"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/Ip2"
        android:layout_width="50dp"
        android:layout_height="36dp"
        android:ems="10"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dot2"
        app:layout_constraintStart_toEndOf="@+id/dot1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/Ip3"
        android:layout_width="50dp"
        android:layout_height="36dp"
        android:ems="10"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dot3"
        app:layout_constraintStart_toEndOf="@+id/dot2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/Ip4"
        android:layout_width="50dp"
        android:layout_height="36dp"
        android:ems="10"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dot3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <EditText
        android:id="@+id/port"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PORT"
        app:layout_constraintTop_toBottomOf="@+id/dot2" />

    <TextView
        android:id="@+id/dot1"
        android:layout_width="35dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/dot"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Ip2"
        app:layout_constraintStart_toEndOf="@+id/Ip1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/IP"
        android:layout_width="35dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/ip1"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Ip1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/dot2"
        android:layout_width="35dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/dot"

        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Ip3"
        app:layout_constraintStart_toEndOf="@+id/Ip2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/dot3"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/dot"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Ip4"
        app:layout_constraintStart_toEndOf="@+id/Ip3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/PORT"
        android:layout_width="109dp"
        android:layout_height="36dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/port"
        app:layout_constraintEnd_toStartOf="@+id/port"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ip1" />

</androidx.constraintlayout.widget.ConstraintLayout>